Added hyperref setup

--- a/config.tex
+++ b/config.tex
@@ -4,6 +4,8 @@
 
 \usepackage{cuthesis}
 \usepackage{hyperref}
+% Make hyperref colors nicer
+\hypersetup{colorlinks=true,linkcolor=black,citecolor=black,filecolor=black,urlcolor=blue}
 % Some example common packages used in computer science thesis
 %\usepackage{cite}
 %\usepackage{amssymb}
